--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "graphql": "^14.6.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-scripts": "3.4.0"
   },
   "scripts": {
