--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
     "graphql": "^14.6.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-linkify": "^1.0.0-alpha",
