--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,10 @@
     "graphql": "^14.6.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-linkify": "^1.0.0-alpha",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
