--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
-    "graphql": "^14.6.0"
+    "express": "^4.17.1",
+    "graphql": "^14.6.0",
+    "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.11"
   }
 }
