--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link-http": "^1.5.16",
+    "classnames": "^2.2.6",
     "graphql": "^14.6.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
