--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^16.12.0",
     "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "use-debounce": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
