--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@apollo/react-hooks": "^3.1.3",
     "@fortawesome/fontawesome-free": "^5.12.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@octokit/rest": "^17.0.0",
