feat: download to desktop

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "GitRank",
-	"name": "Ranking for GitHub's Pull Requests",
+	"short_name": "gitRank",
+	"name": "gitRank - your PR dashboard",
 	"icons": [
 		{
 			"src": "femalecodertocat.png",
