--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-	"tabWidth": 2,
-	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "es5",
-	"jsxSingleQuote": true
+  "tabWidth": 2,
+  "useTabs": false,
+  "singleQuote": true,
+  "trailingComma": "es5",
+  "jsxSingleQuote": true
 }
