--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
+    "encoding": "^0.1.12",
     "express": "^4.17.1",
+    "mongoose": "^5.9.5",
     "nodemon": "^2.0.2",
     "pg": "^7.18.2",
     "pg-promise": "^10.4.4"
