--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "3.4.0",
 		"react-select": "^3.0.8",
+		"react-social-login-buttons": "^3.0.0",
 		"react-transition-group": "^4.3.0",
 		"use-debounce": "^3.3.0",
 		"use-interval": "^1.2.1"
